Resources/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body, html {
    height: 100%;
}

body {
    background: #fff;
    color: #000;
    font-family: Helvetica, Arial;
    text-align: center;
}

.wrapper {
    max-width: 900px;
    margin-left: auto;
    margin-right: auto;
    padding: 60px 40px 40px 40px;
    text-align: left;
}

@media (max-width: 600px) {
    .wrapper {
        padding: 40px 20px;
    }
}

/* HEADER */

header {
    background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0),
    rgba(0, 0, 0, 0.2)
    ), url('../../images/header.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

header .wrapper {
    padding-top: 30px;
    padding-bottom: 30px;
    color: white;
}

header a {
    text-decoration: none;
}

header p {
    margin-top: 15px;
    font-size: 1.2em;
    line-height: 1.5em;
    text-shadow: 0.08em 0.08em #1a1a1a9e;
    color: #fcfdff;
}

header .site-name {
    font-size: 3em;
    font-weight: bold;
    text-shadow: 0.05em 0.05em #1a1a1a52;
}

header nav {
    display: inline-block;
    margin-top: 20px;
    background-color: #fff;
    border-radius: 10px;
    overflow: hidden;
}

header nav ul {
    list-style-type: none;
    margin-right: 20px;
    margin-left: 20px;
}

header nav li {
    display: inline-block;
}

header nav li a {
    display: block;
    color: #122869;
    padding: 0 10px;
    line-height: 30px;
    border-bottom: .15em solid transparent;
    margin: .5em;
}

header nav a:hover,
header nav li a.selected {
    border-color: #122869;
}

@media (min-width: 640px) {
    header {
        padding: 30px 0;
    }
}

/* TEXT */

h1 {
    margin-bottom: 20px;
    font-size: 2em;
}

h2 {
    margin: 30px 0 10px 0;
}

h3, h4 {
    margin: 20px 0 10px 0;
}

p {
    margin-bottom: 4px;
}

a {
    color: inherit;
}

.description {
    margin-bottom: 40px;
}

/* SKETCHNOTES */

.grid.sketchnotes {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 40px;
}

.grid.sketchnotes::after {
    content: '';
    flex-grow: 999999999;
}

.item.sketchnotes {
    margin: 10px 10px 0 0;
    position: relative;
    display: block;
}

.item.sketchnotes a:hover {
    opacity: 0.3;
}

.item.sketchnotes i {
    display: block;
}

.item.sketchnotes img {
    position: absolute;
    top: 0;
    width: 100%;
    vertical-align: bottom;
    border: .15em solid #eee;
}

/* POSTS */

.grid.posts {
    display: grid;
    grid-gap: 15px;
    grid-template-columns: repeat(1, 2fr);
    margin-bottom: 20px;
}

.grid.posts > li:last-child {
    margin-bottom: 0;
}

.grid h1 {
    margin-bottom: 15px;
    font-size: 1.3em;
}

.item.posts {
    display: block;
    padding: 20px;
    border-radius: 20px;
    background-color: #eee;
}

/* ARTICLE */

article p {
    font-size: 1.05em;
    line-height: 1.5em;
    margin-bottom: 0.7em;
}

article p.release-date {
    color: #555;
}

article hr {
    margin: 30px 0;
}

article li {
    margin: 10px 0px 10px 10px;
    font-size: 1.05em;
    line-height: 1.5em;
}

article ul, ol {
    padding: 0px 8px;
}

article img {
    border: .09em solid #eee;
    width: 100%;
    height: auto;
}

article .post-detail img {
    margin: 1em 0;
}

article blockquote {
    margin: 20px auto;
    font-style: italic;
    color: #555;
    padding: 1em 30px;
    border-left: 8px solid #EDEDED;
}

article blockquote p {
    margin-bottom: 0;
}

article figure {
    position: relative;
    padding: 10px;
}

article figcaption {
    margin: 10px 0;
    text-align: center;
    color: #757575;
    font-size: 0.95em;
}

.content {
    margin-bottom: 40px;
}

/* TAGS */

.tag-list {
    margin-bottom: 15px;
}

.tag-list ul {
    padding: 0;
}

.tag-list li,
.tag {
    display: inline-block;
    background-color: #000;
    color: #ddd;
    padding: 4px 6px;
    border-radius: 5px;
    margin-right: 5px;
}

.tag-list a,
.tag a {
    text-decoration: none;
}

.item-page .tag-list {
    display: inline-block;
}

.all-tags li {
    font-size: 1.4em;
    margin-right: 10px;
    padding: 6px 10px;
}

.browse-all {
    display: block;
    margin-bottom: 30px;
}

/* FOOTER */

footer {
    padding: 20px;
    color: #757575;
    line-height: 1.2em;
}

/* DARK THEME */

@media (prefers-color-scheme: dark) {
    body {
        background-color: #222;
    }

    body {
        color: #ddd;
    }

    .item-list > li {
        background-color: #333;
    }

    header {
        background-color: #000;
    }

    article blockquote p {
        color: #9a9898;
    }

    article blockquote {
        border-color: #9a9898;
    }

    article p.release-date {
        color: #9a9898;
    }
}

/* CODE STYLE */

pre {
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    background-color: #1a1a1a;
    padding: 16px 0;
    border-radius: 16px;
}

pre code {
    font-family: monospace;
    display: block;
    padding: 0 20px;
    color: #a9bcbc;
    line-height: 1.4em;
    font-size: 0.95em;
    overflow-x: auto;
    white-space: pre;
    -webkit-overflow-scrolling: touch;
}

pre code .keyword {
    color: #e73289;
}

pre code .type {
    color: #8281ca;
}

pre code .call {
    color: #348fe5;
}

pre code .property {
    color: #21ab9d;
}

pre code .number {
    color: #db6f57;
}

pre code .string {
    color: #fa641e;
}

pre code .comment {
    color: #6b8a94;
}

pre code .dotAccess {
    color: #92b300;
}

pre code .preprocessing {
    color: #b68a00;
}

